# crusty-delivery

./: .gitignore
admin/: index.html  package-lock.json  package.json
admin/src/: App.tsx  index.css  main.tsx
admin/src/assets/: assets.ts
admin/src/components/Navbar/: Navbar.tsx
admin/src/components/Sidebar/: Sidebar.css  Sidebar.tsx
admin/src/pages/Add/: Add.tsx
admin/src/pages/List/: List.tsx
admin/src/pages/Orders/: Orders.tsx
backend/: .gitignore  README.md  pyproject.toml
backend/app/: database.py  main.py
backend/app/api/v1/food/: router.py  schemas.py
backend/app/auth/: router.py  utils.py
backend/app/core/: config.py
backend/app/domain/entities/: food.py
backend/app/domain/values/: base.py  price.py
backend/app/food/: schemas.py
backend/app/users/: schemas.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/assets/: assets.ts
frontend/src/components/AppDownload/: AppDownload.tsx
frontend/src/components/ExploreMenu/: ExploreMenu.css  ExploreMenu.tsx
frontend/src/components/FoodDisplay/: FoodDisplay.css  FoodDisplay.tsx
frontend/src/components/FoodItem/: FoodItem.css  FoodItem.tsx
frontend/src/components/Footer/: Footer.css  Footer.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/LoginPopup/: LoginPopup.css  LoginPopup.tsx
frontend/src/components/Navbar/: Navbar.css  Navbar.tsx
frontend/src/context/: StoreContext.tsx
frontend/src/pages/Cart/: Cart.css  Cart.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/PlaceOrder/: PlaceOrder.tsx
